--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.6.0",
+    "nodemailer-express-handlebars": "^4.0.0",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0"
   },
