--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nodemailer": "^6.6.0",
     "nodemailer-express-handlebars": "^4.0.0",
     "sequelize": "^6.6.2",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
